src/test/ui/const-eval/promoted_const_fn_fail.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/promoted_const_fn_fail.rs:25:19
   |
LL |         Bar { a: &42 }.b as u8
   |                   ^^ temporary value does not live long enough
LL |     }
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
